[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/fishingrod.png" type="Texture" id=1]
[ext_resource path="res://Minijuegos/Pesca/Componentes/Anzuelo.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.73431
height = 23.9459

[node name="Anzuelo" type="RigidBody2D"]
z_index = 1
collision_mask = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.96046e-08, 9 )
rotation = 0.328122
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="Anzuelo_sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Anzuelo_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
